# mnist_20epoch_20kparams

./: .gitignore  CLAUDE.md  README.md  main.py  mlflow_summary.csv  pyproject.toml
dev/: 01_setup.py  02_pipeline_test.py  03_minimal_mnist.py  04_advanced_mnist.py  05_lightning_mnist.py
dev/__marimo__/session/: 01_setup.py.json  02_pipeline_test.py.json  03_minimal_mnist.py.json  (+1 more)
lightning_logs/version_0/: hparams.yaml  metrics.csv
lightning_logs/version_1/: hparams.yaml  metrics.csv
lightning_logs/version_10/: metrics.csv
lightning_logs/version_11/: hparams.yaml  metrics.csv
lightning_logs/version_12/: metrics.csv
lightning_logs/version_13/: metrics.csv
lightning_logs/version_14/: hparams.yaml  metrics.csv
lightning_logs/version_15/: hparams.yaml  metrics.csv
lightning_logs/version_2/: hparams.yaml  metrics.csv
lightning_logs/version_21/: hparams.yaml
lightning_logs/version_22/: metrics.csv
lightning_logs/version_23/: metrics.csv
lightning_logs/version_24/: metrics.csv
lightning_logs/version_25/: hparams.yaml  metrics.csv
lightning_logs/version_26/: metrics.csv
lightning_logs/version_3/: metrics.csv
lightning_logs/version_4/: metrics.csv
lightning_logs/version_5/: hparams.yaml  metrics.csv
lightning_logs/version_6/: metrics.csv
lightning_logs/version_7/: hparams.yaml  metrics.csv
lightning_logs/version_8/: hparams.yaml  metrics.csv
lightning_logs/version_9/: hparams.yaml  metrics.csv
src/: exp.py  training_notebook.ipynb  training_notebook_fixed.ipynb
src/models/: cnn.py  rescnn.py  widecnn.py
src/training/: trainer.py
