[project]
name = "back-to-mnist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.15.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pytorch-lightning>=2.5.5",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
