[project]
name = "back-to-mnist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.36.0",
    "ipykernel>=6.30.1",
    "lightning>=2.5.5",
    "marimo>=0.15.3",
    "matplotlib>=3.10.6",
    "mlflow>=3.3.2",
    "numpy>=2.3.3",
    "python-lsp-server>=1.13.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "ty>=0.0.1a20",
    "watchdog>=6.0.0",
]
